--- a/index.html
+++ b/index.html
@@ -1,368 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>UWC Bot (Voice Enabled Popup)</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>UWC Bot (Voice Enabled)</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 0; }
-
-    /* Modal background */
-    #botModal {
-      display: none; /* hidden by default */
-      position: fixed;
-      z-index: 9999;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0,0,0,0.5);
-      justify-content: center;
-      align-items: center;
-    }
-
-    /* Modal content box */
-    #botContent {
-      background-color: #fff;
-      border-radius: 8px;
-      width: 90%;
-      max-width: 500px;
-      height: 600px;
-      display: flex;
-      flex-direction: column;
-      overflow: hidden;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-    }
-
-    /* Top bar with voice buttons */
     .bar { display:flex; gap:8px; align-items:center; padding:10px; border-bottom:1px solid #eee; }
     #voiceBtn, #stopBtn { border:0; padding:10px 14px; border-radius:8px; cursor:pointer; }
     #voiceBtn { background:#1e88e5; color:#fff; }
     #voiceBtn:disabled { background:#9e9e9e; }
     #stopBtn { background:#f5f5f5; }
-    #status { font-size:14px; color:#555; flex:1; }
-
-    /* Webchat container */
-    #webchat { flex:1; }
-
-    /* Close button */
-    #closeBtn {
-      position: absolute;
-      right: 15px;
-      top: 10px;
-      background: #f44336;
-      border: none;
-      color: #fff;
-      padding: 5px 10px;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    /* Hide floating FAB */
-    .bpw-floating-button { display: none !important; }
+    #status { font-size:14px; color:#555; }
+    #webchat { height: calc(100vh - 56px); }
   </style>
 
+  <!-- Botpress Webchat Script -->
   <script src="https://cdn.botpress.cloud/webchat/v3.2/inject.js"></script>
-</head>
-<body>
-
-<!-- Button on your Google Site -->
-<button id="openBot">Open UWC Bot</button>
-
-<!-- Modal -->
-<div id="botModal">
-  <div id="botContent">
-    <button id="closeBtn">✖</button>
-    <div class="bar">
-      <button id="voiceBtn">🎤 Speak</button>
-      <button id="stopBtn">⏹ Stop Voice</button>
-      <span id="status"></span>
-    </div>
-    <div id="webchat"></div>
-  </div>
-</div>
-
-<script>
-  const openBotBtn = document.getElementById('openBot');
-  const modal = document.getElementById('botModal');
-  const closeBtn = document.getElementById('closeBtn');
-
-  // Open modal
-  openBotBtn.addEventListener('click', () => {
-    modal.style.display = 'flex';
-    window.botpressWebChat && window.botpressWebChat.open();
-  });
-
-  // Close modal
-  closeBtn.addEventListener('click', () => {
-    modal.style.display = 'none';
-  });
-
-  // Initialize Botpress Webchat
-  window.botpress.init({
-    botId: "aa441515-3c65-48ea-acd1-91044111bed2",
-    clientId: "4122d265-45f6-47ff-ad06-007367e5444b",
-    selector: "#webchat",
-    configuration: {
-      enableTextInput: true,
-      showConversationsButton: false,
-      themeMode: 'light',
-      fontFamily: 'Inter, Arial',
-      radius: 4,
-      headerVariant: 'glass',
-      color: '#3276EA',
-      footer: "[⚡ by Botpress](https://botpress.com/?from=webchat)"
-    }
-  });
-
-  (function ready(cb){
-    if(window.botpressWebChat){ cb(); } 
-    else { setTimeout(() => ready(cb), 100); }
-  })(function(){
-    const statusEl=document.getElementById('status');
-    const voiceBtn=document.getElementById('voiceBtn');
-    const stopBtn=document.getElementById('stopBtn');
-
-    // Text-to-Speech
-    function speak(text){
-      window.speechSynthesis.cancel();
-      const u=new SpeechSynthesisUtterance(text);
-      u.lang='en-US';
-      u.rate=1.0;
-      window.speechSynthesis.speak(u);
-    }
-    stopBtn.addEventListener('click',()=>window.speechSynthesis.cancel());
-
-    // Speak bot replies
-    window.botpressWebChat.onEvent('incoming.message',(event)=>{
-      if(event.payload && event.payload.text){
-        speak(event.payload.text);
-      }
-    });
-
-    // Speech-to-Text
-    const Rec=window.SpeechRecognition||window.webkitSpeechRecognition;
-    if(!Rec){
-      statusEl.textContent='Voice input not supported in this browser. Please use Chrome.';
-      voiceBtn.disabled=true;
-      return;
-    }
-
-    const rec=new Rec();
-    rec.lang='en-US';
-    rec.interimResults=false;
-
-    voiceBtn.addEventListener('click',()=>{
-      window.speechSynthesis.cancel();
-      statusEl.textContent='Listening… (allow mic if asked)';
-      voiceBtn.disabled=true;
-      rec.start();
-    });
-
-    rec.onresult=(e)=>{
-      const said=e.results[0][0].transcript;
-      statusEl.textContent=`You said: ${said}`;
-      window.botpressWebChat.sendEvent({type:'input.text', text: said});
-    };
-    rec.onerror=()=>{ statusEl.textContent='Mic error. Try again.'; };
-    rec.onend=()=>{ voiceBtn.disabled=false; };
-
-    // Ensure FAB hidden
-    setTimeout(()=>{
-      const fab = document.querySelector('.bpw-floating-button');
-      if(fab) fab.style.display='none';
-    }, 500);
-  });
-</script>
-
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>UWC Bot (Voice Enabled Popup)</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; }
-
-    /* Modal background */
-    #botModal {
-      display: none; /* hidden by default */
-      position: fixed;
-      z-index: 9999;
-      left: 0;
-      top: 0;
+    #webchat .bpWebchat {
+      position: unset;
       width: 100%;
       height: 100%;
-      background-color: rgba(0,0,0,0.5);
-      justify-content: center;
-      align-items: center;
+      max-height: 100%;
+      max-width: 100%;
     }
-
-    /* Modal content box */
-    #botContent {
-      background-color: #fff;
-      border-radius: 8px;
-      width: 90%;
-      max-width: 500px;
-      height: 600px;
-      display: flex;
-      flex-direction: column;
-      overflow: hidden;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+    #webchat .bpFab {
+      display: none;
     }
-
-    /* Top bar with voice buttons */
-    .bar { display:flex; gap:8px; align-items:center; padding:10px; border-bottom:1px solid #eee; }
-    #voiceBtn, #stopBtn { border:0; padding:10px 14px; border-radius:8px; cursor:pointer; }
-    #voiceBtn { background:#1e88e5; color:#fff; }
-    #voiceBtn:disabled { background:#9e9e9e; }
-    #stopBtn { background:#f5f5f5; }
-    #status { font-size:14px; color:#555; flex:1; }
-
-    /* Webchat container */
-    #webchat { flex:1; }
-
-    /* Close button */
-    #closeBtn {
-      position: absolute;
-      right: 15px;
-      top: 10px;
-      background: #f44336;
-      border: none;
-      color: #fff;
-      padding: 5px 10px;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    /* Hide floating FAB */
-    .bpw-floating-button { display: none !important; }
   </style>
-
-  <script src="https://cdn.botpress.cloud/webchat/v3.2/inject.js"></script>
 </head>
 <body>
 
-<!-- Button on your Google Site -->
-<button id="openBot">Open UWC Bot</button>
-
-<!-- Modal -->
-<div id="botModal">
-  <div id="botContent">
-    <button id="closeBtn">✖</button>
-    <div class="bar">
-      <button id="voiceBtn">🎤 Speak</button>
-      <button id="stopBtn">⏹ Stop Voice</button>
-      <span id="status"></span>
-    </div>
-    <div id="webchat"></div>
-  </div>
+<div class="bar">
+  <button id="voiceBtn">🎤 Speak</button>
+  <button id="stopBtn">⏹ Stop Voice</button>
+  <span id="status"></span>
 </div>
 
+<!-- Botpress Chat Container -->
+<div id="webchat" style="width: 500px; height: 500px;"></div>
+
 <script>
-  const openBotBtn = document.getElementById('openBot');
-  const modal = document.getElementById('botModal');
-  const closeBtn = document.getElementById('closeBtn');
-
-  // Open modal
-  openBotBtn.addEventListener('click', () => {
-    modal.style.display = 'flex';
-    window.botpressWebChat && window.botpressWebChat.open();
+  window.botpress.on("webchat:ready", () => {
+    window.botpress.open();
   });
-
-  // Close modal
-  closeBtn.addEventListener('click', () => {
-    modal.style.display = 'none';
-  });
-
-  // Initialize Botpress Webchat
   window.botpress.init({
-    botId: "aa441515-3c65-48ea-acd1-91044111bed2",
-    clientId: "4122d265-45f6-47ff-ad06-007367e5444b",
-    selector: "#webchat",
-    configuration: {
-      enableTextInput: true,
-      showConversationsButton: false,
-      themeMode: 'light',
-      fontFamily: 'Inter, Arial',
-      radius: 4,
-      headerVariant: 'glass',
-      color: '#3276EA',
-      footer: "[⚡ by Botpress](https://botpress.com/?from=webchat)"
-    }
-  });
-
-  (function ready(cb){
-    if(window.botpressWebChat){ cb(); } 
-    else { setTimeout(() => ready(cb), 100); }
-  })(function(){
-    const statusEl=document.getElementById('status');
-    const voiceBtn=document.getElementById('voiceBtn');
-    const stopBtn=document.getElementById('stopBtn');
-
-    // Text-to-Speech
-    function speak(text){
-      window.speechSynthesis.cancel();
-      const u=new SpeechSynthesisUtterance(text);
-      u.lang='en-US';
-      u.rate=1.0;
-      window.speechSynthesis.speak(u);
-    }
-    stopBtn.addEventListener('click',()=>window.speechSynthesis.cancel());
-
-    // Speak bot replies
-    window.botpressWebChat.onEvent('incoming.message',(event)=>{
-      if(event.payload && event.payload.text){
-        speak(event.payload.text);
-      }
-    });
-
-    // Speech-to-Text
-    const Rec=window.SpeechRecognition||window.webkitSpeechRecognition;
-    if(!Rec){
-      statusEl.textContent='Voice input not supported in this browser. Please use Chrome.';
-      voiceBtn.disabled=true;
-      return;
-    }
-
-    const rec=new Rec();
-    rec.lang='en-US';
-    rec.interimResults=false;
-
-    voiceBtn.addEventListener('click',()=>{
-      window.speechSynthesis.cancel();
-      statusEl.textContent='Listening… (allow mic if asked)';
-      voiceBtn.disabled=true;
-      rec.start();
-    });
-
-    rec.onresult=(e)=>{
-      const said=e.results[0][0].transcript;
-      statusEl.textContent=`You said: ${said}`;
-      window.botpressWebChat.sendEvent({type:'input.text', text: said});
-    };
-    rec.onerror=()=>{ statusEl.textContent='Mic error. Try again.'; };
-    rec.onend=()=>{ voiceBtn.disabled=false; };
-
-    // Ensure FAB hidden
-    setTimeout(()=>{
-      const fab = document.querySelector('.bpw-floating-button');
-      if(fab) fab.style.display='none';
-    }, 500);
+    "botId": "aa441515-3c65-48ea-acd1-91044111bed2",
+    "configuration": {
+      "version": "v2",
+      "website": {},
+      "email": {},
+      "phone": {},
+      "termsOfService": {},
+      "privacyPolicy": {},
+      "color": "#3276EA",
+      "variant": "solid",
+      "headerVariant": "glass",
+      "themeMode": "light",
+      "fontFamily": "inter",
+      "radius": 4,
+      "feedbackEnabled": false,
+      "footer": "[⚡ by Botpress](https://botpress.com/?from=webchat)"
+    },
+    "clientId": "4122d265-45f6-47ff-ad06-007367e5444b",
+    "selector": "#webchat"
   });
 </script>
 
+<!-- 🎤 Voice Feature -->
+<script>
+(function ready(cb){
+  if(window.botpress){ cb(); } 
+  else { setTimeout(() => ready(cb), 100); }
+})(function(){
+  const statusEl=document.getElementById('status');
+  const voiceBtn=document.getElementById('voiceBtn');
+  const stopBtn=document.getElementById('stopBtn');
+
+  // Text-to-Speech
+  function speak(text){
+    window.speechSynthesis.cancel();
+    const u=new SpeechSynthesisUtterance(text);
+    u.lang='en-US'; 
+    u.rate=1.0;
+    window.speechSynthesis.speak(u);
+  }
+  stopBtn.addEventListener('click',()=>window.speechSynthesis.cancel());
+
+  // Speak bot replies
+  window.botpress.on('message',(event)=>{
+    if(event.payload && event.payload.text){
+      speak(event.payload.text);
+    }
+  });
+
+  // Speech-to-Text
+  const Rec=window.SpeechRecognition||window.webkitSpeechRecognition;
+  if(!Rec){
+    statusEl.textContent='Voice input not supported in this browser. Please use Chrome.';
+    voiceBtn.disabled=true;
+    return;
+  }
+
+  const rec=new Rec();
+  rec.lang='en-US';
+  rec.interimResults=false;
+
+  voiceBtn.addEventListener('click',()=>{
+    window.speechSynthesis.cancel();
+    statusEl.textContent='Listening… (allow mic if asked)';
+    voiceBtn.disabled=true;
+    rec.start();
+  });
+
+  rec.onresult=(e)=>{
+    const said=e.results[0][0].transcript;
+    statusEl.textContent=`You said: ${said}`;
+    window.botpress.sendEvent({type:'text', text: said});
+  };
+  rec.onerror=()=>{ statusEl.textContent='Mic error. Try again.'; };
+  rec.onend=()=>{ voiceBtn.disabled=false; };
+});
+</script>
+
 </body>
-</html>
-
-
-
-
-
-
-
-
-
-
+</html>  like this code does
