--- a/index.html
+++ b/index.html
@@ -3,126 +3,126 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>UWC Bot (Voice Enabled)</title>
+  <title>UWC Bot (Text + Voice)</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; }
+    body { font-family: Arial, sans-serif; margin:0; }
     .bar { display:flex; gap:8px; align-items:center; padding:10px; border-bottom:1px solid #eee; }
-    #voiceBtn, #stopBtn { border:0; padding:10px 14px; border-radius:8px; cursor:pointer; }
-    #voiceBtn { background:#1e88e5; color:#fff; }
-    #voiceBtn:disabled { background:#9e9e9e; }
-    #stopBtn { background:#f5f5f5; }
-    #status { font-size:14px; color:#555; }
-    #webchat { height: calc(100vh - 56px); }
+    #voiceToggle { border:0; padding:10px 14px; border-radius:8px; cursor:pointer; background:#1e88e5; color:#fff; }
+    #voiceToggle:disabled { background:#9e9e9e; }
+    #status { font-size:14px; color:#555; flex:1; }
+    #webchat { width:100%; height: calc(100vh - 56px); }
+    /* Ensure default Botpress mic button is hidden */
+    .bpw-speech-button { display: none !important; }
   </style>
-
-  <!-- Botpress Webchat Script -->
   <script src="https://cdn.botpress.cloud/webchat/v3.2/inject.js"></script>
-  <style>
-    #webchat .bpWebchat {
-      position: unset;
-      width: 100%;
-      height: 100%;
-      max-height: 100%;
-      max-width: 100%;
-    }
-    #webchat .bpFab {
-      display: none;
-    }
-  </style>
 </head>
 <body>
 
 <div class="bar">
-  <button id="voiceBtn">🎤 Speak</button>
-  <button id="stopBtn">⏹ Stop Voice</button>
-  <span id="status"></span>
+  <button id="voiceToggle">🎤 Start Voice</button>
+  <span id="status">You can type below or use voice 🎤</span>
 </div>
 
-<!-- Botpress Chat Container -->
-<div id="webchat" style="width: 500px; height: 500px;"></div>
+<div id="webchat"></div>
 
 <script>
-  window.botpress.on("webchat:ready", () => {
-    window.botpress.open();
-  });
+  // Initialize Botpress Webchat without default voice button
   window.botpress.init({
-    "botId": "aa441515-3c65-48ea-acd1-91044111bed2",
-    "configuration": {
-      "version": "v2",
-      "website": {},
-      "email": {},
-      "phone": {},
-      "termsOfService": {},
-      "privacyPolicy": {},
-      "color": "#3276EA",
-      "variant": "solid",
-      "headerVariant": "glass",
-      "themeMode": "light",
-      "fontFamily": "inter",
-      "radius": 4,
-      "feedbackEnabled": false,
-      "footer": "[⚡ by Botpress](https://botpress.com/?from=webchat)"
-    },
-    "clientId": "4122d265-45f6-47ff-ad06-007367e5444b",
-    "selector": "#webchat"
-  });
-</script>
-
-<!-- 🎤 Voice Feature -->
-<script>
-(function ready(cb){
-  if(window.botpress){ cb(); } 
-  else { setTimeout(() => ready(cb), 100); }
-})(function(){
-  const statusEl=document.getElementById('status');
-  const voiceBtn=document.getElementById('voiceBtn');
-  const stopBtn=document.getElementById('stopBtn');
-
-  // Text-to-Speech
-  function speak(text){
-    window.speechSynthesis.cancel();
-    const u=new SpeechSynthesisUtterance(text);
-    u.lang='en-US'; 
-    u.rate=1.0;
-    window.speechSynthesis.speak(u);
-  }
-  stopBtn.addEventListener('click',()=>window.speechSynthesis.cancel());
-
-  // Speak bot replies
-  window.botpress.on('message',(event)=>{
-    if(event.payload && event.payload.text){
-      speak(event.payload.text);
+    botId: 'aa441515-3c65-48ea-acd1-91044111bed2',
+    clientId: '4122d265-45f6-47ff-ad06-007367e5444b',
+    selector: '#webchat',
+    configuration: {
+      enableTextInput: true,
+      enableVoice: false,  // disables top-left voice button
+      showConversationsButton: false,
+      themeMode: 'light',
+      fontFamily: 'Inter, Arial',
+      radius: 4,
+      headerVariant: 'glass',
+      color: '#3276EA',
+      footer: "[⚡ by Botpress](https://botpress.com/?from=webchat)"
     }
   });
 
-  // Speech-to-Text
-  const Rec=window.SpeechRecognition||window.webkitSpeechRecognition;
-  if(!Rec){
-    statusEl.textContent='Voice input not supported in this browser. Please use Chrome.';
-    voiceBtn.disabled=true;
-    return;
-  }
+  (function ready(cb){
+    if(window.botpressWebChat){ cb(); } 
+    else { setTimeout(() => ready(cb), 100); }
+  })(function(){
+    const statusEl = document.getElementById('status');
+    const voiceToggle = document.getElementById('voiceToggle');
 
-  const rec=new Rec();
-  rec.lang='en-US';
-  rec.interimResults=false;
+    // Text-to-Speech function
+    function speak(text){
+      window.speechSynthesis.cancel();
+      const u = new SpeechSynthesisUtterance(text);
+      u.lang = 'en-US';
+      u.rate = 1.0;
+      window.speechSynthesis.speak(u);
+    }
 
-  voiceBtn.addEventListener('click',()=>{
-    window.speechSynthesis.cancel();
-    statusEl.textContent='Listening… (allow mic if asked)';
-    voiceBtn.disabled=true;
-    rec.start();
+    // Speak bot replies aloud
+    window.botpressWebChat.onEvent('incoming.message', (event)=>{
+      if(event.payload && event.payload.text){
+        speak(event.payload.text);
+      }
+    });
+
+    // Speech-to-Text setup
+    const Rec = window.SpeechRecognition || window.webkitSpeechRecognition;
+    if(!Rec){
+      statusEl.textContent = 'Voice input not supported in this browser. Please use Chrome.';
+      voiceToggle.disabled = true;
+      return;
+    }
+
+    const rec = new Rec();
+    rec.lang = 'en-US';
+    rec.interimResults = false;
+
+    let listening = false;
+
+    voiceToggle.addEventListener('click', ()=>{
+      if(!listening){
+        rec.start();
+        listening = true;
+        voiceToggle.textContent = '⏹ Stop Voice';
+        statusEl.textContent = 'Listening… (allow mic if asked)';
+      } else {
+        rec.stop();
+        listening = false;
+        voiceToggle.textContent = '🎤 Start Voice';
+        statusEl.textContent = 'You can type below or use voice 🎤';
+      }
+    });
+
+    rec.onresult = (e)=>{
+      const said = e.results[0][0].transcript;
+      statusEl.textContent = `You said: ${said}`;
+      
+      // Send spoken text to bot
+      window.botpressWebChat.sendEvent({
+        type: 'input.text',
+        text: said,
+        payload: {},
+        channel: 'web'
+      });
+    };
+
+    rec.onerror = ()=>{
+      statusEl.textContent = 'Mic error. Try again.';
+      listening = false;
+      voiceToggle.textContent = '🎤 Start Voice';
+    };
+    
+    rec.onend = ()=>{
+      if(listening){
+        listening = false;
+        voiceToggle.textContent = '🎤 Start Voice';
+        statusEl.textContent = 'You can type below or use voice 🎤';
+      }
+    };
   });
-
-  rec.onresult=(e)=>{
-    const said=e.results[0][0].transcript;
-    statusEl.textContent=`You said: ${said}`;
-    window.botpress.sendEvent({type:'text', text: said});
-  };
-  rec.onerror=()=>{ statusEl.textContent='Mic error. Try again.'; };
-  rec.onend=()=>{ voiceBtn.disabled=false; };
-});
 </script>
 
 </body>
-</html>  like this code does
+</html>
