--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
     #voiceToggle:disabled { background:#9e9e9e; }
     #status { font-size:14px; color:#555; flex:1; }
     #webchat { width:100%; height: calc(100vh - 56px); }
-    /* Ensure default Botpress mic button is hidden */
-    .bpw-speech-button { display: none !important; }
   </style>
   <script src="https://cdn.botpress.cloud/webchat/v3.2/inject.js"></script>
 </head>
@@ -26,14 +24,13 @@
 <div id="webchat"></div>
 
 <script>
-  // Initialize Botpress Webchat without default voice button
+  // Initialize Botpress Webchat
   window.botpress.init({
     botId: 'aa441515-3c65-48ea-acd1-91044111bed2',
     clientId: '4122d265-45f6-47ff-ad06-007367e5444b',
     selector: '#webchat',
     configuration: {
       enableTextInput: true,
-      enableVoice: false,  // disables top-left voice button
       showConversationsButton: false,
       themeMode: 'light',
       fontFamily: 'Inter, Arial',
@@ -51,7 +48,7 @@
     const statusEl = document.getElementById('status');
     const voiceToggle = document.getElementById('voiceToggle');
 
-    // Text-to-Speech function
+    // Text-to-Speech
     function speak(text){
       window.speechSynthesis.cancel();
       const u = new SpeechSynthesisUtterance(text);
@@ -67,7 +64,7 @@
       }
     });
 
-    // Speech-to-Text setup
+    // Speech-to-Text
     const Rec = window.SpeechRecognition || window.webkitSpeechRecognition;
     if(!Rec){
       statusEl.textContent = 'Voice input not supported in this browser. Please use Chrome.';
@@ -83,11 +80,14 @@
 
     voiceToggle.addEventListener('click', ()=>{
       if(!listening){
+        // Start listening
+        window.speechSynthesis.cancel();
         rec.start();
         listening = true;
         voiceToggle.textContent = '⏹ Stop Voice';
         statusEl.textContent = 'Listening… (allow mic if asked)';
       } else {
+        // Stop listening
         rec.stop();
         listening = false;
         voiceToggle.textContent = '🎤 Start Voice';
@@ -108,12 +108,7 @@
       });
     };
 
-    rec.onerror = ()=>{
-      statusEl.textContent = 'Mic error. Try again.';
-      listening = false;
-      voiceToggle.textContent = '🎤 Start Voice';
-    };
-    
+    rec.onerror = ()=>{ statusEl.textContent = 'Mic error. Try again.'; listening = false; voiceToggle.textContent = '🎤 Start Voice'; };
     rec.onend = ()=>{
       if(listening){
         listening = false;
@@ -121,8 +116,22 @@
         statusEl.textContent = 'You can type below or use voice 🎤';
       }
     };
+
+    // Optional: hide mic icon in webchat when text input is active
+    const observer = new MutationObserver(()=>{
+      const micIcon = document.querySelector('.bpw-speech-button');
+      const textInput = document.querySelector('.bpw-input');
+      if(micIcon && textInput){
+        if(document.activeElement === textInput){
+          micIcon.style.display = 'none';
+        } else {
+          micIcon.style.display = 'inline-block';
+        }
+      }
+    });
+    observer.observe(document.body, { childList:true, subtree:true });
   });
 </script>
 
 </body>
-</html>
+</html> this is my code
